[tool.poetry]
name = "dotty"
version = "0.1.0"
description = "A simple dotfiles manager"
authors = ["overflowy <overflowy@riseup.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
